# xllm

./: .gitmodules  CMakeLists.txt  README.md  README_zh.md  setup.py  vcpkg.json
docs/zh/design/: hierarchy_composite_migration_design.md
scripts/build_support/: utils.py
tests/core/common/: rate_limiter_test.cpp
tests/core/framework/batch/: batch_packed_input_test.cpp  batch_test.cpp
tests/core/framework/block/: block_manager_test.cpp  cache_group_spec_builder_test.cpp  composite_block_manager_test.cpp
tests/core/runtime/: acl_graph_executor_test.cpp
tests/core/scheduler/: CMakeLists.txt  continuous_scheduler_test.cpp  disagg_pd_chunked_prefill_scheduler_test.cpp  disagg_pd_scheduler_test.cpp  step_trace_dumper_test.cpp
xllm/: xllm.cpp
xllm/api_service/: chat_service_impl.cpp  completion_service_impl.cpp  rec_completion_service_impl.cpp
xllm/core/common/: CMakeLists.txt  global_flags.cpp  global_flags.h  help_formatter.h  options.cpp  options.h  rate_limiter.h  types.h  xservice_shutdown_policy.h  xservice_shutdown_policy_test.cpp
xllm/core/distributed_runtime/: CMakeLists.txt  comm_channel.cpp  disagg_pd_service_impl.cpp  engine.h  llm_engine.cpp  llm_master.cpp  master.cpp  rec_master.cpp  remote_worker.cpp  remote_worker.h  signal_policy.h  signal_policy_test.cpp  vlm_master.cpp  worker_server.cpp  worker_service.cpp  worker_service.h
xllm/core/framework/kv_cache_transfer/: CMakeLists.txt  hierarchy_kv_cache_transfer.cpp  hierarchy_kv_cache_transfer.h  kv_cache_store.h  kv_cache_transfer.cpp
xllm/core/platform/: CMakeLists.txt
xllm/core/runtime/: CMakeLists.txt  concurrent_rec_worker_impl.cpp  concurrent_rec_worker_impl.h  forward_params.h  forward_shared_memory_manager.cpp  llm_engine.cpp  llm_worker_impl.cpp  llm_worker_impl.h  master.cpp  options.h  params_utils.cpp  params_utils.h  rec_worker_impl.cpp  rec_worker_impl.h  worker.cpp  worker_impl.cpp  worker_impl.h  xservice_client.cpp  xservice_client.h
xllm/core/scheduler/: CMakeLists.txt  async_response_processor.cpp  async_response_processor.h  chunked_prefill_scheduler.cpp  continuous_scheduler.cpp  continuous_scheduler.h  disagg_pd_chunked_prefill_scheduler.cpp  disagg_pd_chunked_prefill_scheduler.h  disagg_pd_scheduler.cpp  fixed_steps_scheduler.cpp  pd_ooc_scheduler.cpp  step_trace_dumper.cpp  step_trace_dumper.h  step_trace_utils.cpp  step_trace_utils.h  zero_eviction_scheduler.cpp
xllm/core/util/: scoped_timer.h
xllm/models/llm/: deepseek_v4.h  llm_model_base.h  qwen3.h  qwen3_moe.h
xllm/proto/: chat.proto  completion.proto  disagg_pd.proto  worker.proto
(+80 files in other folders)
